--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -690,6 +690,7 @@
 				var oribipra=realheightpra/realwidthpra;
 				var showheightpra=oribipra*imgwidth;
 				var cha2=showheightpra-imgwidth;
+				var price = praise_commdata[pi].price ? parseFloat(praise_commdata[pi].price).toLocaleString() : "0";
 				if(cha2>0){
 					toppxpra=(cha2/2)*(-1);
 				}else{
