--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -136,11 +136,13 @@
 							</a>
 						</li>
 					</ul>
-					<ul class="user-comment-list">
-						<li class="user-point-grid" style="display: none;">
-							<a href="#">
-								<font color="#AAAAAA" size="1">
-									<span class="mui-icon-extra mui-icon-extra-share lang" data-locale="userpointtext" style="font-size: 16px;"></span>　
+					<ul class="user-comment-list" style="margin-top: 0.5rem;">
+						<li class="user-point-grid" style="margin-right: 1.5em;">
+							<a href="../../transaction/balance_management.html">
+								<font color="#AAAAAA" size="1" style="font-size: 16px;">
+									<span class="lang" data-locale="userpricetext">
+									</span>
+									<span>&yen;<span>3,000,000</span></span>
 								</font>
 							</a>
 						</li>
